src/objects/sb_action__c.object
<CustomObject>
    <description>Springboard Advocacy Object for all actions.</description>
    <fields>
        <fullName>Actions_Taken__c</fullName>
        <description>The total number of contacts who have successfully taken this action. (CONFIRM)</description>
        <inlineHelpText>The total number of contacts who have successfully taken this action. (CONFIRM)</inlineHelpText>
        <label>Actions Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body/long description of the action.</description>
        <inlineHelpText>This is the body or long description of the action.</inlineHelpText>
        <label>Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign this action is related to.</description>
        <inlineHelpText>Campaign this action is related to.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <description>Create date of the action</description>
        <inlineHelpText>Create date of the action</inlineHelpText>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Browser__c</fullName>
        <label>Device Browser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Device_OS__c</fullName>
        <label>Device OS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_mail_Mailing_ID__c</fullName>
        <label>E-mail Mailing ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edit_URL__c</fullName>
        <description>Link to edit this action in Springboard.</description>
        <inlineHelpText>Link to edit this action in Springboard.</inlineHelpText>
        <label>Edit URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Action_Date__c</fullName>
        <description>Date of the first action taken.</description>
        <inlineHelpText>Date of the first action taken.</inlineHelpText>
        <label>First Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Name__c</fullName>
        <description>Internal organizational name for this action, if there is one.</description>
        <inlineHelpText>Internal organizational name for this action, if there is one.</inlineHelpText>
        <label>Internal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Action_Date__c</fullName>
        <description>Date of the last action taken.</description>
        <inlineHelpText>Date of the last action taken.</inlineHelpText>
        <label>Last Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legislative_Issue__c</fullName>
        <description>Legislative issue(s) for this action, selected in Springboard.</description>
        <inlineHelpText>Legislative issue(s) for this action, selected in Springboard.</inlineHelpText>
        <label>Legislative Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Issue__c</fullName>
        <description>Organization issue(s) for this action, selected in Springboard.</description>
        <inlineHelpText>Organization issue(s) for this action, selected in Springboard.</inlineHelpText>
        <label>Organization Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <label>Original Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <description>Public URL of the action.</description>
        <inlineHelpText>Public URL of the action.</inlineHelpText>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Social_Shares__c</fullName>
        <description>Number of times this action was shared on social media.</description>
        <inlineHelpText>Number of times this action was shared on social media.</inlineHelpText>
        <label>Social Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Springboard_ID__c</fullName>
        <description>ID of the action in Springboard</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the action in Springboard</inlineHelpText>
        <label>Springboard ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Message_Action</fullName>
        <active>true</active>
        <label>Message Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Petitions</fullName>
        <active>true</active>
        <description>used for tracking Springboard petitions</description>
        <label>Petitions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Action</fullName>
        <active>true</active>
        <label>Social Action</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>